--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,8 +1,7 @@
 name: Playwright Tests
 on:
+  workflow_dispatch:
   push:
-    branches: [main, master]
-  pull_request:
     branches: [main, master]
   schedule:
     - cron: "*/15 * * * *"
