--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -33,12 +33,14 @@ jobs:
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
       - name: Run Playwright tests
+        id: playwright_test
         env:
           LUXMED_LOGIN: ${{ secrets.LUXMED_LOGIN }}
           LUXMED_PASSWORD: ${{ secrets.LUXMED_PASSWORD }}
           LUXMED_LOGIN_KID: ${{ secrets.LUXMED_LOGIN_KID }}
           LUXMED_PASSWORD_KID: ${{ secrets.LUXMED_PASSWORD_KID }}
         run: npx playwright test
+        continue-on-error: true
       - name: Extract failed names
         if: failure()
         id: report
@@ -46,7 +48,9 @@ jobs:
           export REPORT=$(node -e 'console.log(require("./test-results.json").suites.map(suite => suite.specs[0]).filter(spec => !spec.ok).map(spec => spec.title).join(","))')
           echo $REPORT
           echo "::set-output name=REPORT::$REPORT"
+        continue-on-error: true
       - name: Notification Slack
+        if: failure()
         uses: rtCamp/action-slack-notify@v2
         env:
           SLACK_CHANNEL: ci
